<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp" >

        <Button
            android:id="@+id/button_nocry1"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/nocry1" />

        <Button
            android:id="@+id/button_nocry2"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/nocry2" />

        <Button
            android:id="@+id/button_nocry3"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/nocry3" />

        <Button
            android:id="@+id/button_nocry4"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/nocry4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_marginBottom="30dp" >

        <Button
            android:id="@+id/button_cry1"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/cry1" />

        <Button
            android:id="@+id/button_cry2"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/cry2" />

        <Button
            android:id="@+id/button_cry3"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/cry3" />

        <Button
            android:id="@+id/button_cry4"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/cry4" />
    </LinearLayout>

    <Button
        android:id="@+id/button_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginBottom="36dp"
        android:text="@string/microphone" />

    <TextView
        android:id="@+id/hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button_mic"
        android:layout_marginRight="91dp"
        android:text="@string/zero"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/samples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hits"
        android:layout_below="@+id/hits"
        android:layout_marginTop="29dp"
        android:text="@string/zero"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/samples"
        android:layout_alignLeft="@+id/button_mic"
        android:layout_marginBottom="27dp"
        android:text="@string/samples"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/hits"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="25dp"
        android:text="@string/hits"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>